# Smart-Harbour-Computer-Vision

./: .gitignore  .pdm-python  README.md
controller/: .env.docker  .env.docker.2  .gitignore  Dockerfile  Dockerfile.dev.stream  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run_mock_rtsp.sh  stream_video.docker.sh
controller/app/: main.py
controller/data/: README.md
controller/src/: api.py  main.py  models.py  settings.py
controller/src/rtsp_grabber/: __init__.py  frame_grabber.py  test_scenario_grabber.py
object-detection/: .dockerignore  .env.docker  Dockerfile  Dockerfile.base  Dockerfile.export  README.md  base64_video_encoder.py  build_docker.sh  docker-compose.yaml  main.py  requirements.txt  test_model_on_video_file.py
object-detection/app/: main.py
object-detection/app/auth/: __init__.py  (+2 more)
object-detection/app_log/: __init__.py  app_logger.py
object-detection/certs/: cert.pem  key.pem
object-detection/config/: config.docker.yaml  config.yaml  config_loader.py
object-detection/data/: README.md
object-detection/dto/: __init__.py  detection_model.py  image_model.py
object-detection/models/: README.md
object-detection/services/: __init__.py  yolo_service.py
object-detection/utils/: .env.docker.build  .env.local  .env.sumo3  README.md  base64_video_encoder.py  export_pt_model.py  test_api_on_video_file.py  test_model_on_video_file.py  video_stream.py
ocr/: Dockerfile  README.md  docker-compose.yaml  requirements.txt  run.py  run.sh  test_concurrent_ocr_tasks.py  test_ocr.py
ocr/src/: flask_api.py  ocr_model.py  run.py
(+6 files in other folders)
